support_tools/swigwin-3.0.12/Examples/test-suite/errors/c_redefine.i
%module xxx

int foo(int x, int y);
int foo;

int bar(int x);

struct bar {
  int y;
};

%rename(bar) spam;

int spam(int);






